<resources>
    <string name="app_name">Shopping Cart</string>

    <string name="add_product">Create Product</string>
    <string name="add_product_extended">Create a product to add on the cart later</string>

    <string name="add_to_cart">Add to Cart</string>

    <string name="complete_purchase">Complete Purchase and View Receipt</string>

    <string name="product_name">Product Name</string>
    <string name="cost">Cost</string>
    <string name="category">Category</string>
    <string name="imported">Imported</string>

    <string name="format_quantity">x %1$d</string>

    <string name="sales_tax">Sales Tax</string>
    <string name="total">Total</string>

    <string name="load_purchase">Load Purchase</string>
    <string name="empty_cart">Empty Cart</string>

    <string name="none">None</string>
    <string name="vehicle">Vehicle</string>
    <string name="alcoholic_beverage">Alcoholic Beverage</string>
    <string name="consumer_electronics">Consumer Electronics</string>
    <string name="coffee">Coffee</string>
    <string name="candy">Candy</string>
    <string name="popcorn">Popcorn</string>
</resources>
